force-app/main/default/objects/deal_chatter_deal_approval_chatter_link__c/deal_chatter_deal_approval_chatter_link__c.object-meta.xml
<CustomObject>
    <description>Object to hold link between chatter id created in deal approval chatter and deal chatter</description>
    <label>Deal Chatter and deal Approval Chatter</label>
    <nameField>
        <label>Deal Chatter and deal Approval Chatter L Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Chatter and deal Approval Chatters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>