force-app/main/default/objects/deal_chatter_deal_approval_chatter_link__c/fields/Deal_Approval_Chatter_Id__c.field-meta.xml
<CustomField>
    <fullName>Deal_Approval_Chatter_Id__c</fullName>
    <description>Deal Approval Chatter Id</description>
    <label>Deal_Approval_Chatter_Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>