force-app/main/default/objects/deal_chatter_deal_approval_chatter_link__c/fields/DealChatterId__c.field-meta.xml
<CustomField>
    <fullName>DealChatterId__c</fullName>
    <description>Chatter Id on the deal</description>
    <inlineHelpText>id of the chatter on the deal</inlineHelpText>
    <label>DealChatterId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>