force-app/main/default/objects/deal_chatter_deal_approval_chatter_link__c/fields/is_chatter_related__c.field-meta.xml
<CustomField>
    <fullName>is_chatter_related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this chatter or chatter comments related chatter</description>
    <label>is chatter related</label>
    <type>Checkbox</type>
</CustomField>