force-app/main/default/objects/deal_chatter_deal_approval_chatter_link__c/recordTypes/Beekin_Rental_AVM.recordType-meta.xml
<RecordType>
    <fullName>Beekin_Rental_AVM</fullName>
    <active>true</active>
    <description>Beekin Rental AVM</description>
    <label>Beekin Rental AVM</label>
</RecordType>